--- a/client/src/Components/Admin/Customers/Customers/Customers.css
+++ b/client/src/Components/Admin/Customers/Customers/Customers.css
@@ -5,6 +5,10 @@
   margin-bottom: 20px
 }
 
+.Customers {
+  margin-top: 25px;
+}
+
 .Customer:hover {
   border: 0px solid rgb(86, 180, 239);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
