--- a/client/src/Components/Admin/Menu/AdminMenu/AdminMenu.css
+++ b/client/src/Components/Admin/Menu/AdminMenu/AdminMenu.css
@@ -1,7 +1,10 @@
-.MenuItemList {
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 30px;
+.AdminMenu {
+  margin-top: 25px;
+}
+
+.Link:hover {
+  text-decoration: none;
+  color: red;
 }
 
 .MenuItem {
@@ -12,15 +15,17 @@
 
 .MenuItem:hover {
   border: 0px solid rgb(86, 180, 239);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
-}
-
-.Link:hover {
-  text-decoration: none;
-  color: red;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset,
+    0px 0px 8px rgba(82, 168, 236, 0.6);
 }
 
 .MenuItemForm {
   margin-left: 25%;
   margin-right: 25%;
+}
+
+.MenuItemList {
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-top: 30px;
 }
