Admin home page is now responsive

--- a/client/src/Components/Admin/Home/Home/Home.css
+++ b/client/src/Components/Admin/Home/Home/Home.css
@@ -1,4 +1,14 @@
+.Order {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .Order:hover {
   border: 0px solid rgb(86, 180, 239);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
+}
+
+.Customers {
+  margin-left: 10%;
+  margin-right: 10%;
 }
