--- a/client/src/Components/Admin/CreateOrder/CreateOrder.css
+++ b/client/src/Components/Admin/CreateOrder/CreateOrder.css
@@ -1,7 +1,7 @@
 
 .OrderItem {
   margin-bottom: 13px;
-  padding: 5px
+  padding: 0px
 }
 
 .OrderItem:hover {
@@ -9,8 +9,15 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(250, 32, 61, 0.6);
 }
 
-.CreateOrderForm {
-  margin-top: 100px;
+.CreateOrder {
+  margin-top: 25px;
   margin-left: 20%;
   margin-right: 20%;
+}
+
+@media only screen and (max-width: 1100px) {
+  .CreateOrder {
+  margin-left: 2%;
+  margin-right: 2%;
+  }
 }
