--- a/client/src/Components/Admin/Menu/AdminMenu/AdminMenu.css
+++ b/client/src/Components/Admin/Menu/AdminMenu/AdminMenu.css
@@ -25,7 +25,15 @@
 }
 
 .MenuItemList {
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 20%;
+  margin-right: 20%;
   margin-top: 30px;
+}
+
+@media only screen and (max-width: 1100px) {
+  .MenuItemList {
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 30px;
+  }
 }
