Image alert isn't shown. Image is uploaded when dropped or selected.

--- a/client/src/Components/Admin/Menu/AdminMenu/AdminMenu.css
+++ b/client/src/Components/Admin/Menu/AdminMenu/AdminMenu.css
@@ -29,6 +29,14 @@
   margin-top: 30px;
 }
 
+.PreviewList-imageContainer-402 {
+    z-index: 10;
+    position: relative;
+    margin: auto;
+    padding: 0;
+    text-align: center;
+}
+
 @media only screen and (max-width: 1100px) {
   .MenuItemList {
     margin-left: 2%;
