--- a/client/src/Components/Admin/Home/Home/Home.css
+++ b/client/src/Components/Admin/Home/Home/Home.css
@@ -8,7 +8,8 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
 }
 
-.Customers {
+.Orders {
+  margin-top: 25px;
   margin-left: 10%;
   margin-right: 10%;
 }
