--- a/client/src/Components/Admin/Customers/Customers/Customers.css
+++ b/client/src/Components/Admin/Customers/Customers/Customers.css
@@ -16,6 +16,11 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
 }
 
+.CustomerForm {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 .CustomerList {
   margin-left: 0%;
   margin-right: 0%;
@@ -27,6 +32,4 @@
     margin-left: 0%;
     margin-right: 0%;
   }
-
-  
 }
