--- a/client/src/Components/Admin/Customers/Customers/Customers.css
+++ b/client/src/Components/Admin/Customers/Customers/Customers.css
@@ -7,8 +7,8 @@
 
 .Customers {
   margin-top: 25px;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 .Customer:hover {
